# PfCUDA

./: .gitignore  CMakeLists.txt  README.md  _CMakeLists.txt  backup.cpp  backup_fast.cu  backup_sm_kernel.cu  benchmark.py  benchmark_jax.py  benchmark_lrux.py  benchmark_pfcuda.py  benchmark_pfcuda_sm.py  bindings.cpp  build.sh  jax_CMakeLists.txt  main.cpp  pf_sm_backup_semi_blocked.txt  pfaffian  pfaffian.cu  pfaffian.h  pfaffian.py  pfaffian_benchmark.json  pfaffian_test.py  pfcuda_test.py  pybind11_benchmark.py  pyproject.toml  raw_pfaffian.cu  raw_pfaffian.h
.VSCodeCounter/2026-04-26_17-47-59/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
_legacy/: 10_pfaffian (full cols).cu  1_pfaffian.cu  4_pfaffian.cu  7_pfaffian.cu  8_pfaffian.cu  CMakeLists.txt  ___pfaffian.cpp  a.out  basic_pfaffian.cpp  benchmark.py  bindings.cpp  block_size.py  cblas)pfaffian.cpp  cblas_blocked_pfaffian.cpp  cpu_CMakeLists.txt  cpu_bindings.cpp  cpu_pfaffian.h  cublas_pfaffian.cu  fast_pfaffian.cpp  first_pfaffian.cu  img.py  jax_finder.py  lagacy_pfaffian_cuda.cu  matrix.hpp  normal_bindings.cpp  numpy_utils.hpp  pfaffian  pfaffian.cpp  pfaffian.cu  pfaffian_backup.cu  pfaffian_pv.cu  pfaffian_simple.py  pfaffian_sm_calc_backup.cu  pfcpp_test.py  pfcuda_test.py  pybind11_CMakeLists.txt  rm_pfaffian.cu  run.sh  test.py  wimmer_pfaffian.cu
_legacy/notes_and_experiments/blocked/cpp/: add.cu  pfaffian.cu
_legacy/notes_and_experiments/blocked/python/: 1000_pfaffian_benchmark.json  1900_pfaffian_benchmark.json  2000_pfaffian_benchmark.json  500_pfaffian_benchmark.json  benchmark.py  benchmark_cpu.py  benchmark_cpu_log.py  benchmark_jax.py  benchmark_jax_log.py  exp.py  notes.py  pfaffian.cpp  pfaffian_ap.py  pfaffian_benchmark.json  pfaffian_det_based.py  pfaffian_inner_func.py  pfaffian_jax.py  pfaffian_jax_naive.py  pfaffian_jax_op_mask.py  pfaffian_jax_op_no_mask.py  pfaffian_jax_op_pm.py  pfaffian_jax_s.py  pfaffian_jax_super.py  pfaffian_m.py  pfaffian_np_single_block.py  pfaffian_np_single_block_op.py  pfaffian_op_s.py  pfaffian_opp.py  pfaffian_recursive.py  pfaffian_s.py  pfaffian_simple.py  pfaffian_ss.py  pfaffian_ss_blocked.py  pfaffian_sss.py  pfaffian_ssss.py  pfaffian_v.py  pfaffian_with_pivot.py  pfaffian_x.py  pftest.py  save_pfaffian_benchmark.json  (+1 more)
_legacy/notes_and_experiments/blocked/python/tests/: pfaffian_op_s.py  pfaffian_test.py
_legacy/notes_and_experiments/unblocked/cpp/: pfaffian.cpp
_legacy/notes_and_experiments/unblocked/python/tests/: pfaffian_test.py
_legacy/tests/: pfaffian_test.py
benchmarking/: benchmark_pfaffian.py  benchmark_pfcuda.py  benchmark_pfcuda_sm.py  benchmark_slog_pfaffian.py
benchmarks/: pfaffian_data.json  slog_pfaffian_data.json
bindings/: jax_bindings.cu  pybind11_bindings.cu  pybind_bindings.cpp
blocked/cpp/: pfaffian  pfaffian.cu
blocked/python/: ____benchmark_results.json  ___benchmark_results.json  __benchmark_results.json  _benchmark_results.json  benchmark.py  benchmark_cpu.py  benchmark_jax.py  benchmark_results.json  exp.py  notes.py  pfaffian.py  pfaffian_benchmark.json  pfaffian_det_based.py  pfaffian_jax.py  pfaffian_jax_naive.py  pfaffian_np_multi_blocks.py  pfaffian_np_single_block.py  pfaffian_np_single_block_op.py  pfaffian_op.py  pfaffian_simple.py
blocked/python/benchmarks/: benchmark.py
blocked/python/tests/: pfaffian_test.py
include/: pfaffian.cuh  pfaffian_cpp.h  pfaffian_cpu.h  pfaffian_sm.cuh  pfaffian_utils.cuh  slog_pfaffian.cuh  slog_pfaffian_lg.cuh
notes_and_experiments/blocked/cpp/: add.cu  pfaffian  pfaffian.cu
notes_and_experiments/blocked/python/: benchmark.py  benchmark_cpu.py  benchmark_cpu_log.py  benchmark_jax.py  benchmark_jax_log.py  exp.py  (+13 more)
pfcuda/: __init__.py  cpp_api.py  cuda_api.py  pfaffian_py.py
src/: jax_bindings.cu  pfaffian.cu  pfaffian_cpu.cpp  pfaffian_sm.cu  slog_pfaffian.cu  slog_pfaffian_lg.cu
test/: pfaffian_test.py  slog_pfaffian_test.py
unblocked/cpp/: matrix.hpp  pfaffian.hpp
(+7 files in other folders)
